fix: responsive and font adjustements on mobile

--- a/apps/client/src/styles/_settings.scss
+++ b/apps/client/src/styles/_settings.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: Inter-Variable;
-  src: url(fonts/Inter-Variable.ttf) format("truetype-variations");
+  src: url("/fonts/Inter-Variable.ttf") format("truetype-variations");
   font-display: swap; /* Améliore les performances du chargement */
 }
 
