--- a/apps/client/src/styles/components/_contact.scss
+++ b/apps/client/src/styles/components/_contact.scss
@@ -90,7 +90,7 @@
   }
 
   @media (max-width: 768px) {
-    height: 20vh;
+    height: 30vh;
     padding: 4rem 1.5rem 2rem;
 
     &__subtitle {
