--- a/apps/client/src/styles/components/_nav.scss
+++ b/apps/client/src/styles/components/_nav.scss
@@ -43,6 +43,7 @@
   }
 
   &__link {
+    color: rgba(24, 24, 24, 0.8);
     position: relative;
     border: none;
     background: none;
@@ -85,7 +86,6 @@
     justify-content: center;
     width: 34px;
     height: 34px;
-    // border-radius: 999px;
     color: $color-black;
     text-decoration: none;
     transition: 0.2s ease-out;
@@ -99,24 +99,24 @@
       display: block;
     }
   }
+}
 
-  @media (max-width: 1024px) {
-    &__inner {
-      max-width: 85vw;
-      gap: 1rem;
-    }
+@media (max-width: 1024px) {
+  .site-nav__inner {
+    max-width: 100vw;
+    gap: 0.3rem;
+  }
 
-    &__links {
-      gap: 0.75rem;
-    }
+  .site-nav__links {
+    gap: 0.3rem;
+  }
 
-    &__link {
-      font-size: $font-size-sm;
-    }
+  .site-nav__link {
+    font-size: $font-size-xs;
+  }
 
-    &__icon {
-      width: 20px;
-      height: 20px;
-    }
+  .site-nav__icon {
+    width: 20px;
+    height: 20px;
   }
 }
